fix modals increase on mobiles

--- a/src/app/App.module.scss
+++ b/src/app/App.module.scss
@@ -21,6 +21,6 @@ h1, h2, h3, h4, h5, ul, ol, p {
   margin: 0;
 }
 
-input, select, option  {
+input, select, option, textarea  {
   font-size: 16px;
 }
